--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
     tools:context="com.shiv.connect4.MainActivity">
 
     <GridLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:columnCount="3"
@@ -24,65 +25,15 @@
         android:layout_alignParentStart="true">
 
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:id="@+id/imageView12"
-            android:layout_column="2"
+            android:id="@+id/imageView4"
+            android:layout_column="0"
             android:layout_row="0"
-            android:contentDescription="@string/_4"
-            android:layout_marginLeft="20dp"
+            android:contentDescription="@string/_1"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_marginTop="30dp"
-            android:onClick="dropIn" />
-        <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:id="@+id/imageView13"
-            android:layout_column="0"
-            android:layout_row="1"
-            android:contentDescription="@string/_5"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="70dp"
-            android:onClick="dropIn" />
-        <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:id="@+id/imageView14"
-            android:layout_column="1"
-            android:layout_row="1"
-            android:contentDescription="@string/_6"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="70dp"
-            android:onClick="dropIn" />
-        <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:id="@+id/imageView15"
-            android:layout_column="2"
-            android:layout_row="1"
-            android:contentDescription="@string/_7"
-            android:layout_marginTop="70dp"
-            android:layout_marginLeft="20dp"
-            android:onClick="dropIn" />
-        <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:id="@+id/imageView16"
-            android:layout_column="0"
-            android:layout_row="2"
-            android:contentDescription="@string/_8"
-            android:layout_marginTop="100dp"
-            android:layout_marginLeft="10dp"
-            android:onClick="dropIn" />
-        <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:id="@+id/imageView17"
-            android:layout_column="1"
-            android:layout_row="2"
-            android:contentDescription="@string/_9"
-            android:layout_marginTop="100dp"
-            android:layout_marginLeft="20dp"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="0" />
 
         <ImageView
             android:layout_width="90dp"
@@ -93,17 +44,80 @@
             android:contentDescription="@string/_2"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="20dp"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="1" />
 
         <ImageView
-            android:id="@+id/imageView4"
-            android:layout_column="0"
-            android:layout_row="0"
-            android:contentDescription="@string/_1"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:id="@+id/imageView12"
+            android:layout_column="2"
+            android:layout_row="0"
+            android:contentDescription="@string/_4"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="30dp"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="2"/>
+
+        <ImageView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:id="@+id/imageView13"
+            android:layout_column="0"
+            android:layout_row="1"
+            android:contentDescription="@string/_5"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="70dp"
+            android:onClick="dropIn"
+            android:tag="3"/>
+
+        <ImageView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:id="@+id/imageView14"
+            android:layout_column="1"
+            android:layout_row="1"
+            android:contentDescription="@string/_6"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="70dp"
+            android:onClick="dropIn"
+            android:tag="4"/>
+
+        <ImageView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:id="@+id/imageView15"
+            android:layout_column="2"
+            android:layout_row="1"
+            android:contentDescription="@string/_7"
+            android:layout_marginTop="70dp"
+            android:layout_marginLeft="20dp"
+            android:onClick="dropIn"
+            android:tag="5"/>
+
+        <ImageView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:id="@+id/imageView16"
+            android:layout_column="0"
+            android:layout_row="2"
+            android:contentDescription="@string/_8"
+            android:layout_marginTop="100dp"
+            android:layout_marginLeft="10dp"
+            android:onClick="dropIn"
+            android:tag="6"/>
+
+        <ImageView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:id="@+id/imageView17"
+            android:layout_column="1"
+            android:layout_row="2"
+            android:contentDescription="@string/_9"
+            android:layout_marginTop="100dp"
+            android:layout_marginLeft="20dp"
+            android:onClick="dropIn"
+            android:tag="7" />
 
         <ImageView
             android:layout_width="90dp"
@@ -114,7 +128,8 @@
             android:contentDescription="@string/_3"
             android:layout_marginTop="100dp"
             android:layout_marginLeft="20dp"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="8" />
 
     </GridLayout>
 
